[gd_scene load_steps=4 format=3 uid="uid://coexvxqc0t63s"]

[ext_resource type="PackedScene" uid="uid://b08rtywbsbu8o" path="res://components/card/card.tscn" id="1_3gji6"]
[ext_resource type="Script" uid="uid://uhufdcn2lof1" path="res://components/discard_pile/discard_pile.gd" id="1_5pf74"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5pf74"]

[node name="DiscardPile" type="Control"]
custom_minimum_size = Vector2(22, 35)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5pf74")

[node name="CardContainer" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Card" parent="CardContainer" instance=ExtResource("1_3gji6")]
layout_mode = 1
offset_right = 22.0
offset_bottom = 35.0

[node name="Tooltip" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="TooltipPanel" type="PanelContainer" parent="Tooltip"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -14.0
offset_right = 4.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Tooltip/TooltipPanel"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 0

[node name="TooltipLabel" type="RichTextLabel" parent="Tooltip/TooltipPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "2"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_5pf74")

[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
